# Glaucis

./: .gitignore  AGENT.md  README.md
kernel-evolve/: README.md  gmm_fp8_bwd.yaml  gmm_fp8_fwd.yaml  pyproject.toml
kernel-evolve/.github/workflows/: kernel-eval.yaml
kernel-evolve/docker/: Dockerfile  evaluate.py
kernel-evolve/examples/: chunk_fused_kernels.yaml  chunk_gla.yaml  gmm_fp8_blockwise.yaml  matmul.yaml
kernel-evolve/examples/kernels/: chunk_fused_kernels.py  chunk_fused_kernels_ref.py  chunk_gla.py  chunk_gla_ref.py  fused_chunk_simple_gla_ref.py  gmm_fp8_blockwise.py  gmm_fp8_blockwise_ref.py  matmul.py  matmul_ref.py
kernel-evolve/kernels/: gmm_fp8_bwd.py  gmm_fp8_bwd_ref.py  gmm_fp8_fwd.py  gmm_fp8_fwd_ref.py
kernel-evolve/runs/chunk_gla_20260330_210547/: lineages.json
kernel-evolve/scripts/: explore_xplane.py  run_matmul_eval.py  setup_gcs_profile_bucket.sh  verify_profile.py
kernel-evolve/src/kernel_evolve/: __init__.py  cli.py  (+11 more)
kernel-evolve/tests/: standalone_chunk_fused_kernels_test.py  standalone_chunk_gla_test.py  standalone_fused_chunk_simple_gla_test.py  standalone_gmm_fp8_blockwise_test.py  test_batch_integration.py  test_chunk_fused_kernels.py  test_chunk_gla.py  test_ci_dispatcher.py  test_cli.py  test_config.py  test_docker_evaluate.py  test_engine.py  test_evaluate_artifacts.py  test_evaluator.py  test_fused_chunk_simple_gla.py  test_init_kernel_conventions.py  test_integration.py  test_kube_evaluator.py  test_llm.py  test_llm_providers.py  test_mutation.py  test_perf_log.py  test_population.py  test_profiler.py  test_tuning.py
(+458 files in other folders)
